--- a/assets/style.css
+++ b/assets/style.css
@@ -153,7 +153,8 @@ header nav a:hover::before {
     padding: 0% 0% 0% 1%;
 }
 
-.Projectbox h3 {
+.Projectbox a {
+    font-size: 20px;
 }
 
 .Projectbig {
